disabled schema generation

--- a/P03-ReviewsAPI/src/main/resources/application.properties
+++ b/P03-ReviewsAPI/src/main/resources/application.properties
@@ -4,3 +4,8 @@
 #spring.datasource.password=<db password goes here>
 
 spring.jpa.show-sql=true
+
+# DO NOT MODIFY
+# Don't let JPA/Hibernate create the schema
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=none
