--- a/demos/c1/spring-boot-websocket-demo/pom.xml
+++ b/demos/c1/spring-boot-websocket-demo/pom.xml
@@ -73,6 +73,17 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+
+			<plugin>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>3.1</version>
+				<configuration>
+					<fork>true</fork>
+					<executable>C:\Program Files\Java\jdk1.8.0_211\bin\javac.exe</executable>
+
+				</configuration>
+			</plugin>
+
 		</plugins>
 	</build>
 
