--- a/projects/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
+++ b/projects/P02-VehiclesAPI/pricing-service/src/main/resources/application.properties
@@ -1,1 +1,5 @@
+spring.application.name=pricing-service
 server.port=8082
+eureka.client.serviceUrl.defaultZone=http://localhost:8761/eureka/
+eureka.client.service-url.default-zone=http://localhost:8761/eureka/
+instance.preferIpAddress=true
