--- a/projects/P04-eCommerce Application/starter_code/src/main/resources/application.properties
+++ b/projects/P04-eCommerce Application/starter_code/src/main/resources/application.properties
@@ -1,6 +1,13 @@
+spring.application.name=Udacity-Ecommerce
+spring.main.banner-mode=OFF
+
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.url=jdbc:h2:mem:bootapp;DB_CLOSE_DELAY=-1
 spring.datasource.username=sa
 spring.datasource.password=
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.H2Dialect
+
+logging.level.=INFO
+logging.level.org.springframework=WARN
+logging.level.org.hibernate=WARN
